color specific theme not working

--- a/home/private_dot_config/private_gtk-3.0/settings.ini
+++ b/home/private_dot_config/private_gtk-3.0/settings.ini
@@ -2,4 +2,5 @@
 gtk-application-prefer-dark-theme=true
 gtk-cursor-theme-name=phinger-cursors-light
 gtk-icon-theme-name=Papirus-Dark
-gtk-theme-name=Catppuccin-Mocha-Mauve
+; gtk-theme-name=Catppuccin-Mocha-Rosewater
+gtk-theme-name=Catppuccin-Mocha
