--- a/info/tools.yml
+++ b/info/tools.yml
@@ -1,10 +1,10 @@
-
 tool: &default
   asset: x86_64-unknown-linux-gnu
 
 # environment
 sheldon:
   user: rossmacarthur
+
 starship:
   user: starship
   asset: starship-x86_64-unknown-linux-gnu.tar.gz
@@ -30,6 +30,8 @@ gum:
   user: charmbracelet
   asset: linux_x86_64.tar.gz
   custom_flags: "--asset ^.sbom"
+fzf:
+  user: junegunn
 
 # system monitoring
 bottom:
@@ -39,7 +41,6 @@ bottom:
   to: btm
 btop:
   user: aristocratos
-
 
 # git
 lazygit:
@@ -81,4 +82,3 @@ gdu:
   asset: gdu_linux_amd64.tgz
 lf:
   user: gokcehan
-
