--- a/home/private_dot_config/eget/eget.toml
+++ b/home/private_dot_config/eget/eget.toml
@@ -1,5 +1,6 @@
 [global]
 target = "~/bin"
+asset_filters = "^musl"
 
 ["ellie/atuin"]
 
@@ -44,7 +45,7 @@ asset_filters = ["linux_x86_64.tar.gz", "^.sbom"]
 ["gokcehan/lf"]
 
 ["Peltoche/lsd"]
-asset_filters = ["x86_64-unknown-linux-gnu"]
+asset_filters = ["-x86_64-unknown-linux-gnu.tar.gz"]
 
 ["neovim/neovim"]
 target = "nvim"
