--- a/home/private_dot_config/starship/config.toml
+++ b/home/private_dot_config/starship/config.toml
@@ -2,9 +2,8 @@
 format = "[$user]($style) on "
 
 [character]
-# success_symbol = "[-](bold green)[-](bold yellow)[>](bold cyan)"
-success_symbol = "[>>=](bold fg:#f5e0dc)[|>](bold cyan)"
-error_symbol = "[>>=](bold fg:red)[!!](bold red)"
+success_symbol = "[λ](bold fg:#f5e0dc)[ 🠊](bold cyan)"
+error_symbol = "[λ](bold fg:red)[ !](bold red)"
 
 [gcloud]
 disabled = true
