mostly neovim/tmux stuffs

--- a/home/private_dot_config/lazygit/config.yml
+++ b/home/private_dot_config/lazygit/config.yml
@@ -23,8 +23,10 @@ gui:
       - "#89b4fa" # Blue
     selectedLineBgColor:
       - "#313244" # Surface0
+      - reverse
     selectedRangeBgColor:
       - "#313244" # Surface0
+      - reverse
     cherryPickedCommitBgColor:
       - "#94e2d5" # Teal
     cherryPickedCommitFgColor:
