--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -3,7 +3,8 @@ setw -g mode-keys vi
 
 set -g prefix C-a
 unbind C-b
-bind C-a send-prefix
+
+set -g mouse on
 
 # smart pane switching with awareness of vim splits
 bind h select-pane -L
