update styles yo

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -1,12 +1,12 @@
 set -g status-keys vi
 setw -g mode-keys vi
 
-set -g prefix C-a
-unbind C-b
-
 set -g mouse on
 
+# keybindings
 # smart pane switching with awareness of vim splits
+set -g prefix C-a
+unbind C-b
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -21,7 +21,6 @@ unbind %
 # Set default term to xterm
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-
 
 # --------catppuccin mocha
 # --> Catppuccin (Mocha)
@@ -39,40 +38,31 @@ thm_blue="#89b4fa"
 thm_orange="#fab387"
 thm_black4="#585b70"
 
-# status
 set -g status "on"
 set -g status-bg "${thm_bg}"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status-right-length "100"
+set -g status-style "fg=${thm_magenta}"
+set-option -g status on
+set-option -g status-interval 2
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 60
+set -g status-right '[#S]'
+set-option -g window-status-current-style "fg=${thm_orange}"
+set-option -g window-status-last-style "fg=${thm_yellow}"
 
 # messages
-set -g message-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set -g message-style "fg=${thm_orange},bg=${thm_gray},align=centre"
 set -g message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
 
 # panes
 set -g pane-border-style "fg=${thm_gray}"
-set -g pane-active-border-style "fg=${thm_blue}"
+set -g pane-active-border-style "fg=${thm_pink}"
 
 # windows
 setw -g window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
-setw -g window-status-separator ""
+setw -g window-status-separator " | "
 setw -g window-status-style "fg=${thm_fg},bg=${thm_bg},none"
 
-# --------=== Statusline
-#
-set -g status-style "fg=${thm_cyan}"
-# set -g status-left ""
-# set -g status-right "#[fg=$thm_pink,bg=$thm_bg,nobold,nounderscore,noitalics]#[fg=$thm_bg,bg=$thm_pink,nobold,nounderscore,noitalics] #[fg=$thm_fg,bg=$thm_gray] #W #{?client_prefix,#[fg=$thm_red],#[fg=$thm_green]}#[bg=$thm_gray]#{?client_prefix,#[bg=$thm_red],#[bg=$thm_green]}#[fg=$thm_bg] #[fg=$thm_fg,bg=$thm_gray] #S 
-# #
-# # current_dir
-# # setw -g window-status-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_gray] #{b:pane_current_path} "
-# # setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_bg] #{b:pane_current_path} "
-# #
-# # # parent_dir/current_dir
-# setw -g window-status-format "#[fg=$thm_bg,bg=$thm_blue] #I #[fg=$thm_fg,bg=$thm_gray] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
-# setw -g window-status-current-format "#[fg=$thm_bg,bg=$thm_orange] #I #[fg=$thm_fg,bg=$thm_bg] #(echo '#{pane_current_path}' | rev | cut -d'/' -f-2 | rev) "
 
-# --------=== Modes
 setw -g clock-mode-colour "${thm_blue}"
 setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
