tmux is actually so cool

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -7,6 +7,7 @@ set -g mouse on
 # smart pane switching with awareness of vim splits
 set -g prefix C-a
 unbind C-b
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -38,21 +39,26 @@ thm_blue="#89b4fa"
 thm_orange="#fab387"
 thm_black4="#585b70"
 
-set -g status "on"
-set -g status-bg "${thm_bg}"
-set -g status-style "fg=${thm_magenta}"
-set-option -g status on
-set-option -g status-interval 2
-set-option -g status-justify "centre"
-set-option -g status-left-length 60
-set-option -g status-right-length 60
-set -g status-right '[#S]'
-set-option -g window-status-current-style "fg=${thm_orange}"
-set-option -g window-status-last-style "fg=${thm_yellow}"
+set -g status on
+set -g status-style "fg=magenta,bg=default"
+set -g status-interval 2
+set -g status-justify "centre"
+
+set -g status-left "working on#[fg=cyan,bold] #S"
+set -g status-left-length 60
+# set -g status-right '[#S]'
+set -g status-right "%b %d %Y %l:%M %p"
+set -g status-right-length 60
+
+set -g window-status-last-style "fg=${thm_yellow}"
+set -g pane-border-lines heavy
+
+active_marker="#[fg=red,bold] λ "
+set -g window-status-current-format "#[bg=${thm_bg}]${active_marker}#[fg=green,bold]#W${active_marker}"
 
 # messages
-set -g message-style "fg=${thm_orange},bg=${thm_gray},align=centre"
-set -g message-command-style "fg=${thm_cyan},bg=${thm_gray},align=centre"
+set -g message-style "fg=${thm_orange},bg=${thm_bg},align=centre"
+set -g message-command-style "fg=${thm_cyan},bg=${thm_bg},align=centre"
 
 # panes
 set -g pane-border-style "fg=${thm_gray}"
@@ -62,7 +68,6 @@ set -g pane-active-border-style "fg=${thm_pink}"
 setw -g window-status-activity-style "fg=${thm_fg},bg=${thm_bg},none"
 setw -g window-status-separator " | "
 setw -g window-status-style "fg=${thm_fg},bg=${thm_bg},none"
-
 
 setw -g clock-mode-colour "${thm_blue}"
 setw -g mode-style "fg=${thm_pink} bg=${thm_black4} bold"
