--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/python
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
@@ -159,4 +158,5 @@ cython_debug/
 # End of https://www.toptal.com/developers/gitignore/api/python
 
 .task.mk
-lib/plugins/
+plugins/
+
