make neovim do less neovimming

--- a/home/private_dot_config/eget/eget.toml
+++ b/home/private_dot_config/eget/eget.toml
@@ -2,6 +2,10 @@
 target = "~/bin/"
 asset_filters = ["^musl"]
 
+["solidiquis/erdtree"]
+asset_filters = ["x86_64-unknown-linux-gnu"]
+file = "et"
+
 ["ellie/atuin"]
 
 ["sharkdp/bat"]
