--- a/home/private_dot_config/starship/config.toml
+++ b/home/private_dot_config/starship/config.toml
@@ -1,4 +1,5 @@
 command_timeout = 1000
+palette = "catppuccin_mocha"
 
 [username]
 format = "[$user]($style) on "
@@ -6,6 +7,12 @@ format = "[$user]($style) on "
 [character]
 success_symbol = "[λ](bold fg:#f5e0dc)[ ▷](bold cyan)"
 error_symbol = "[λ](bold fg:red)[ !](bold red)"
+
+[directory]
+truncation_length = 4
+read_only = " "
+# Catppuccin 'lavender'
+style = "bold lavender"
 
 [gcloud]
 disabled = true
@@ -33,9 +40,6 @@ truncation_length = 2
 
 [dart]
 symbol = " "
-
-[directory]
-read_only = " "
 
 [docker_context]
 symbol = " "
@@ -87,3 +91,31 @@ symbol = "🅢 "
 
 [rust]
 symbol = " "
+
+[palettes.catppuccin_mocha]
+rosewater = "#f5e0dc"
+flamingo = "#f2cdcd"
+pink = "#f5c2e7"
+mauve = "#cba6f7"
+red = "#f38ba8"
+maroon = "#eba0ac"
+peach = "#fab387"
+yellow = "#f9e2af"
+green = "#a6e3a1"
+teal = "#94e2d5"
+sky = "#89dceb"
+sapphire = "#74c7ec"
+blue = "#89b4fa"
+lavender = "#b4befe"
+text = "#cdd6f4"
+subtext1 = "#bac2de"
+subtext0 = "#a6adc8"
+overlay2 = "#9399b2"
+overlay1 = "#7f849c"
+overlay0 = "#6c7086"
+surface2 = "#585b70"
+surface1 = "#45475a"
+surface0 = "#313244"
+base = "#1e1e2e"
+mantle = "#181825"
+crust = "#11111b"
