--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -4,10 +4,11 @@ setw -g mode-keys vi
 set -g mouse on
 
 # keybindings
-# smart pane switching with awareness of vim splits
-set -g prefix C-a
+set -g prefix C-Space
+bind-key C-Space send-prefix
 unbind C-b
 
+# smart pane switching with awareness of vim splits
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
