--- a/home/private_dot_config/pikaur.conf
+++ b/home/private_dot_config/pikaur.conf
@@ -10,9 +10,9 @@ keepbuilddir = no
 keepdevbuilddir = yes
 keepbuilddeps = no
 skipfailedbuild = no
-alwaysusedynamicusers = no
 ignorearch = no
 gpgdir = 
+dynamicusers = root
 
 [review]
 noedit = no
