deal with old tmux complaints

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -52,7 +52,7 @@ set -g status-right "%b %d %Y %l:%M %p"
 set -g status-right-length 60
 
 set -g window-status-last-style "fg=${thm_yellow}"
-set -g pane-border-lines heavy
+# set -g pane-border-lines heavy # old tmux doesn't have this?
 
 active_marker="#[fg=red,bold] λ "
 set -g window-status-current-format "#[bg=${thm_bg}]${active_marker}#[fg=green,bold]#W${active_marker}"
