--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -20,6 +20,8 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+bind s display-popup -h 60% -w 60% -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" -E "tsm"
+
 # Set default term to xterm
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -52,7 +54,7 @@ set -g status-right "%b %d %Y %l:%M %p"
 set -g status-right-length 60
 
 set -g window-status-last-style "fg=${thm_yellow}"
-# set -g pane-border-lines heavy # old tmux doesn't have this?
+set -g pane-border-lines heavy
 
 active_marker="#[fg=red,bold] λ "
 set -g window-status-current-format "#[bg=${thm_bg}]${active_marker}#[fg=green,bold]#W${active_marker}"
