--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -20,7 +20,12 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-bind s display-popup -h 60% -w 60% -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" -E "tsm"
+bind g display-popup -E "echo hello; sleep 5"
+
+bind s display-popup \
+  -h 60% -w 60% \
+  -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" \
+  -E "tsm"
 
 # Set default term to xterm
 set -g default-terminal "xterm-256color"
