many tmux upgrades

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -20,8 +20,6 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-bind g display-popup -E "echo hello; sleep 5"
-
 bind s display-popup \
   -h 60% -w 60% \
   -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" \
@@ -50,10 +48,11 @@ thm_black4="#585b70"
 set -g status on
 set -g status-style "fg=magenta,bg=default"
 set -g status-interval 2
-set -g status-justify "centre"
+set -g status-justify "absolute-centre"
 
-set -g status-left "working on#[fg=cyan,bold] #S"
-set -g status-left-length 60
+set -g status-left "#[fg=red,bold]λ#[fg=cyan,bold] #S"
+
+# set -g status-left-length 60
 # set -g status-right '[#S]'
 set -g status-right "%b %d %Y %l:%M %p"
 set -g status-right-length 60
@@ -61,8 +60,8 @@ set -g status-right-length 60
 set -g window-status-last-style "fg=${thm_yellow}"
 set -g pane-border-lines heavy
 
-active_marker="#[fg=red,bold] λ "
-set -g window-status-current-format "#[bg=${thm_bg}]${active_marker}#[fg=green,bold]#W${active_marker}"
+active_marker="#[fg=red,bold] "
+set -g window-status-current-format "#[bg=${thm_bg}]${active_marker} #[fg=green,bold]#W"
 
 # messages
 set -g message-style "fg=${thm_orange},bg=${thm_bg},align=centre"
