update tmux theme

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -50,9 +50,9 @@ set -g status-style "fg=magenta,bg=default"
 set -g status-interval 2
 set -g status-justify "absolute-centre"
 
-set -g status-left "#[fg=red,bold]λ#[fg=cyan,bold] #S"
+set -g status-left "#[fg=${thm_magenta},bold]λ#[fg=${thm_yellow},bold] #S"
 
-# set -g status-left-length 60
+set -g status-left-length 60
 # set -g status-right '[#S]'
 set -g status-right "%b %d %Y %l:%M %p"
 set -g status-right-length 60
@@ -60,8 +60,8 @@ set -g status-right-length 60
 set -g window-status-last-style "fg=${thm_yellow}"
 set -g pane-border-lines heavy
 
-active_marker="#[fg=red,bold] "
-set -g window-status-current-format "#[bg=${thm_bg}]${active_marker} #[fg=green,bold]#W"
+active_marker="#[fg=${thm_cyan},bold]"
+set -g window-status-current-format "#[bg=${thm_bg}]${active_marker} #[fg=${thm_red},bold]#W"
 
 # messages
 set -g message-style "fg=${thm_orange},bg=${thm_bg},align=centre"
