I don't even know how tmux configs work

--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -1,6 +1,7 @@
 set -g status-keys vi
 setw -g mode-keys vi
-
+set -sg escape-time 10
+set -g focus-events on
 set -g mouse on
 
 # keybindings
@@ -25,8 +26,7 @@ bind s display-popup \
   -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" \
   -E "tsm"
 
-# Set default term to xterm
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # --------catppuccin mocha
