--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -26,7 +26,7 @@ bind s display-popup \
   -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" \
   -E "tsm"
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # --------catppuccin mocha
