--- a/home/private_dot_config/alacritty/alacritty.yml
+++ b/home/private_dot_config/alacritty/alacritty.yml
@@ -1,5 +1,9 @@
 import:
   - ~/.config/alacritty/catppuccin-mocha.yml
+
+env:
+  TERM: xterm-256color
+
 window:
   dimensions:
     columns: 90
@@ -12,49 +16,29 @@ window:
     x: 10
     y: 10
 
-  # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
 
-  # Window decorations
-  #
   # Values for `decorations`:
   #     - full: Borders and title bar
   #     - none: Neither borders nor title bar
   #
-  # Values for `decorations` (macOS only):
-  #     - transparent: Title bar, transparent background and title bar buttons
-  #     - buttonless: Title bar, transparent background and no title bar buttons
   decorations: full
-  # Window title
   title: Alacritty
 
 # Font configuration
 font:
-  # Normal (roman) font face
   normal:
     family: "MonoLisa Nerd Font"
-  # bold:
-  #   style: Bold
-  # italic:
-  #   style: Italic
-  # bold_italic:
-  #   style: Bold Italic
   size: 12
-draw_bold_text_with_bright_colors: true
 
 cursor:
-  # Cursor style
   style:
-    # Cursor shape
-    #
     # Values for `shape`:
     #   - ▇ Block
     #   - _ Underline
     #   - | Beam
     shape: Underline
 
-    # Cursor blinking state
-    #
     # Values for `blinking`:
     #   - Never: Prevent the cursor from ever blinking
     #   - Off: Disable blinking by default
