--- a/home/private_dot_config/starship/config.toml
+++ b/home/private_dot_config/starship/config.toml
@@ -5,13 +5,12 @@ palette = "catppuccin_mocha"
 format = "[$user]($style) on "
 
 [character]
-success_symbol = "[](bold fg:#f5e0dc)[ ](bold cyan)"
-error_symbol = "[](bold fg:red)[ !](bold red)"
+success_symbol = "[󰵈](bold fg:#f5e0dc)[ ](bold cyan)"
+error_symbol = "[󰵈](bold fg:red)[ !](bold red)"
 
 [directory]
 truncation_length = 4
 read_only = " 󰌾"
-# Catppuccin 'lavender'
 style = "bold lavender"
 
 [gcloud]
@@ -23,6 +22,8 @@ disabled = true
 [localip]
 disabled = true
 
+[zig]
+symbol = ' '
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
