--- a/home/private_dot_config/tmux/tmux.conf
+++ b/home/private_dot_config/tmux/tmux.conf
@@ -21,10 +21,9 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-bind s display-popup \
-  -h 60% -w 60% \
-  -B -e FZF_DEFAULT_OPTS="${FZF_DEFAULT_OPTS} --height=100%" \
-  -E "tsm"
+bind f display-popup \
+  -h 40% -w 40% \
+  -B -E "tsm"
 
 set -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
