--- a/home/private_dot_config/gtk-4.0/settings.ini
+++ b/home/private_dot_config/gtk-4.0/settings.ini
@@ -1,5 +1,14 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-cursor-theme-name=phinger-cursors-light
 ; gtk-icon-theme-name=Papirus-Dark
+gtk-application-prefer-dark-theme=true
+gtk-cursor-theme-name=breeze_cursors
+; gtk-cursor-theme-name=phinger-cursors-light
+gtk-cursor-theme-size=24
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=breeze
+gtk-modules=colorreload-gtk-module
+gtk-primary-button-warps-slider=false
 gtk-theme-name=Catppuccin-Mocha
+gtk-xft-dpi=98304
