--- a/home/private_dot_config/private_gtk-3.0/settings.ini
+++ b/home/private_dot_config/private_gtk-3.0/settings.ini
@@ -1,5 +1,16 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
+gtk-button-images=true
+; gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-name=phinger-cursors-light
-gtk-icon-theme-name=Papirus-Dark
-gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
+gtk-cursor-theme-size=24
+gtk-decoration-layout=icon:minimize,maximize,close
+gtk-enable-animations=true
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=breeze
+gtk-menu-images=true
+gtk-modules=colorreload-gtk-module
+gtk-primary-button-warps-slider=false
+gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-dark
+gtk-toolbar-style=3
+gtk-xft-dpi=98304
