--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -3,17 +3,13 @@ monitor=,preferred,auto,1
 monitor=eDP-1,1920x1200,1920x0,1
 monitor=DP-5,1920x1080,0x0,1
 
-# Execute your favorite apps at launch
-exec-once = eww open bar0 & eww open bar1 &
-exec-once = hyprpaper &
-
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-env = XDG_CURRENT_DESKTOP,sway # for flameshot
+# env = XDG_CURRENT_DESKTOP,Hyprland # for flameshot
+
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     gaps_in = 5
     gaps_out = 20
     border_size = 2
@@ -27,16 +23,12 @@ general {
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 10
-
     blur {
         enabled = true
         size = 3
         passes = 1
     }
-
     drop_shadow = yes
     shadow_range = 20
     shadow_render_power = 2
@@ -81,3 +73,6 @@ misc {
 
 source = ./keys.conf
 source = ./windows.conf
+
+animation=windows,1,5,default,popin 80%
+animation=workspaces,1,5,default,slidefadevert 20%
