--- a/home/private_dot_config/hypr/hyprpaper.conf
+++ b/home/private_dot_config/hypr/hyprpaper.conf
@@ -1,5 +1,6 @@
-preload = ./wallpapers/ai/painted-landscape/00005-4229950720.png
-preload = ./wallpapers/ai/painted-landscape/00006-2215131891.png
 
-wallpaper = eDP-1, ./wallpapers/ai/painted-landscape/00005-4229950720.png
-wallpaper = DP-5,  ./wallpapers/ai/painted-landscape/00006-2215131891.png
+preload = ~/.config/hypr/wallpapers/ai/painted-landscape/00005-4229950720.png
+preload = ~/.config/hypr/wallpapers/ai/painted-landscape/00006-2215131891.png
+
+wallpaper = eDP-1, ~/.config/hypr/wallpapers/ai/painted-landscape/00005-4229950720.png
+wallpaper = DP-5,  ~/.config/hypr/wallpapers/ai/painted-landscape/00006-2215131891.png
