--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -1,10 +1,11 @@
 $mainMod = SUPER
 
 # Program binds
-bind = $mainMod SHIFT, RETURN, exec, alacritty
+bind = $mainMod SHIFT, RETURN, exec, wezterm
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
 
 bind = $mainMod SHIFT, Q, killactive,
+bind = $mainMod SHIFT, L, exec, swaylock
 bind = $mainMod, m, exit,
 bind = $mainMod, f, togglefloating,
 
@@ -34,15 +35,20 @@ bind = $mainMod SHIFT, 5, movetoworkspace, 5
 bind = $mainMod SHIFT, 6, movetoworkspace, 6
 bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, S,exec,grimblast copy area
+bind = $mainMod SHIFT,S, exec, grimblast save output
+
+bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
+bind = , XF86RaiseLowerVolume, exec, pamixer --increase 5
+bind = , XF86AudioMute, exec, pamixer --toggle-mute
+bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
+bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
+
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
