--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -68,11 +68,13 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    disable_splash_rendering = true
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
 source = ./keys.conf
 source = ./windows.conf
+source = ./execs.conf
 
 animation=windows,1,5,default,popin 80%
 animation=workspaces,1,5,default,slidefadevert 20%
