hyprland closer to good

--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -1,9 +1,10 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
+# let kanshi handle it
 monitor=,preferred,auto,1
-monitor=eDP-1,1920x1200,1920x0,1
-monitor=DP-5,1920x1080,0x0,1
+# monitor=eDP-1,1920x1200,1920x0,1
+# monitor=DP-3,1920x1080,0x0,1
 
 # Some default env vars.
+env = GDK_SCALE=2
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
@@ -60,6 +61,7 @@ gestures {
 }
 
 misc {
+  # disable_autoreload = true
   disable_splash_rendering = true
   force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
