--- a/home/private_dot_config/hypr/execs.conf
+++ b/home/private_dot_config/hypr/execs.conf
@@ -2,4 +2,8 @@ exec-once = ~/.config/hypr/start_eww.sh &
 exec-once = hyprpaper &
 exec-once = flameshot &
 exec-once = dunst -conf ~/.config/hypr/dunstrc &
+exec-once = kanshi &
+exec-once = udiskie &
+
+exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
