--- a/home/private_dot_config/hypr/hyprpaper.conf
+++ b/home/private_dot_config/hypr/hyprpaper.conf
@@ -2,7 +2,10 @@
 preload = ~/.config/hypr/wallpapers/ai/painted-landscape/00005-4229950720.png
 preload = ~/.config/hypr/wallpapers/ai/painted-landscape/00006-2215131891.png
 
+preload =  ~/.config/hypr/wallpapers/ai/painted-landscape/00009-2215131894.png
+
 wallpaper = eDP-1, ~/.config/hypr/wallpapers/ai/painted-landscape/00005-4229950720.png
 wallpaper = DP-5,  ~/.config/hypr/wallpapers/ai/painted-landscape/00006-2215131891.png
+wallpaper = DP-3, ~/.config/hypr/wallpapers/ai/painted-landscape/00009-2215131894.png
 
 splash = false
