--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -7,7 +7,9 @@ bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, L, exec, swaylock
 bind = $mainMod, m, exit,
-bind = $mainMod, f, togglefloating,
+bind = $mainMod, f, fullscreen, 0
+bind = $mainMod SHIFT, f, togglefloating,
+# bind = $mainMod SHIFT, R, reload
 
 # Move focus with mainMod + hjkl
 bind = $mainMod, h, movefocus, l
