hyprland in flux

--- a/home/private_dot_config/hypr/execs.conf
+++ b/home/private_dot_config/hypr/execs.conf
@@ -1,9 +1,12 @@
-exec-once = ~/.config/hypr/start_eww.sh &
-exec-once = hyprpaper &
-exec-once = flameshot &
-exec-once = dunst -conf ~/.config/hypr/dunstrc &
-exec-once = kanshi &
-exec-once = udiskie &
+# exec-once = ~/.config/hypr/start_eww.sh &
+# exec-once = flameshot &
 
-exec-once=xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+exec-once = dunst -conf ~/.config/hypr/dunstrc &
+# exec-once = udiskie &
+exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+
+exec = kanshi &
+exec = hyprpaper &
+# TODO: make hyprman kill eww if necessary
+exec = pkill eww & hyprman monitors &
 
