--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -61,7 +61,7 @@ gestures {
 }
 
 misc {
-  # disable_autoreload = true
+  disable_autoreload = true
   disable_splash_rendering = true
   force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
