--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -5,7 +5,7 @@ bind = $mainMod SHIFT, RETURN, exec, wezterm
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
 
 bind = $mainMod SHIFT, Q, killactive,
-bind = $mainMod SHIFT, L, exec, swaylock
+bind = $mainMod SHIFT, L, exec, lock
 bind = $mainMod, f, fullscreen, 0
 bind = $mainMod SHIFT, f, togglefloating,
 
