add a rofi companion to notes bin

--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -67,6 +67,8 @@ bind = ,W, exec, ~/.config/rofi/bin/windows.sh
 bind = ,W, submap, reset
 bind = ,P, exec, ~/.config/rofi/bin/powermenu.sh
 bind = ,P, submap, reset
+bind = ,N, exec, ~/.config/rofi/bin/notes.sh
+bind = ,N, submap, reset
 
 bind = ,escape, submap, reset
 submap = reset
