more notes-updates

--- a/home/private_dot_config/hypr/execs.conf
+++ b/home/private_dot_config/hypr/execs.conf
@@ -5,8 +5,10 @@ exec-once = dunst -conf ~/.config/hypr/dunstrc &
 # exec-once = udiskie &
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
+exec = swayidle &
 exec = kanshi &
 exec = hyprpaper &
+
 # TODO: make hyprman kill eww if necessary
 exec = pkill eww & hyprman monitors &
 
