--- a/home/private_dot_config/hypr/windows.conf
+++ b/home/private_dot_config/hypr/windows.conf
@@ -3,6 +3,7 @@ windowrulev2 = tile,class:(Vivaldi-stable)
 # prevent flameshot from requesting fullscreen
 # windowrulev2 = nofullscreenrequest,class:^(flameshot)$,title:^(flameshot)
 
-# set flameshot to floating
 # windowrulev2 = float,class:^(flameshot)$,title:^(flameshot)
 
+set notes editor to floating
+windowrulev2 = float,class:^(notes-editor)$
