--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -3,6 +3,7 @@ $mainMod = SUPER
 # Program binds
 bind = $mainMod SHIFT, RETURN, exec, wezterm
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
+bind = $mainMod, N, exec, wezterm start --class "notes-editor" -e notes
 
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, L, exec, lock
@@ -67,8 +68,8 @@ bind = ,W, exec, ~/.config/rofi/bin/windows.sh
 bind = ,W, submap, reset
 bind = ,P, exec, ~/.config/rofi/bin/powermenu.sh
 bind = ,P, submap, reset
-bind = ,N, exec, ~/.config/rofi/bin/notes.sh
-bind = ,N, submap, reset
+# bind = ,N, exec, ~/.config/rofi/bin/notes.sh
+# bind = ,N, submap, reset
 
 bind = ,escape, submap, reset
 submap = reset
