add rules for notes editor

--- a/home/private_dot_config/hypr/windows.conf
+++ b/home/private_dot_config/hypr/windows.conf
@@ -2,8 +2,15 @@ windowrulev2 = tile,class:(Vivaldi-stable)
 
 # prevent flameshot from requesting fullscreen
 # windowrulev2 = nofullscreenrequest,class:^(flameshot)$,title:^(flameshot)
-
 # windowrulev2 = float,class:^(flameshot)$,title:^(flameshot)
 
-set notes editor to floating
-windowrulev2 = float,class:^(notes-editor)$
+windowrulev2 = float,class:^(MultiViewer for F1)$
+
+
+windowrulev2 = float, class:^(notes-editor)$
+windowrulev2 = move 10% 10% ,class:^(notes-editor)$
+windowrulev2 = size 80% 80% ,class:^(notes-editor)$
+windowrulev2 = dimaround, class:^(notes-editor)$
+windowrulev2 = animation popin 50%, class:^(notes-editor)$
+
+
