use swww with kanshi

--- a/home/private_dot_config/hypr/execs.conf
+++ b/home/private_dot_config/hypr/execs.conf
@@ -7,7 +7,8 @@ exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOB
 
 exec = swayidle &
 exec = kanshi &
-exec = hyprpaper &
+exec = swww init &
+# exec = hyprpaper &
 
 # TODO: make hyprman kill eww if necessary
 exec = pkill eww & hyprman monitors &
