improved notes editor

--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -3,7 +3,7 @@ $mainMod = SUPER
 # Program binds
 bind = $mainMod SHIFT, RETURN, exec, wezterm
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
-bind = $mainMod, N, exec, wezterm start --class "notes-editor" -e notes
+bind = $mainMod, N, exec, wezterm start --class "notes-editor" -e notes-commit
 
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, L, exec, lock
