make if harder to quit Hyprland

--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -10,7 +10,7 @@ bind = $mainMod SHIFT, L, exec, lock
 bind = $mainMod, f, fullscreen, 0
 bind = $mainMod SHIFT, f, togglefloating,
 
-bind = $mainMod, m, exit,
+bind = $mainMod SHIFT, m, exit,
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 
 # Move focus with mainMod + hjkl
