--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -7,7 +7,7 @@ monitor=,preferred,auto,1
 env = GDK_SCALE=2
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
-env = GTK_THEME, Catppuccin-Mocha-Standard-Rosewater-Dark
+# env = GTK_THEME, Catppuccin-Mocha-Standard-Rosewater-Dark
 
 
 general {
