--- a/home/private_dot_config/hypr/keys.conf
+++ b/home/private_dot_config/hypr/keys.conf
@@ -1,9 +1,13 @@
 $mainMod = SUPER
+$term = wezterm
+$termStart = wezterm start
+# $term = alacritty
+# $termStart = alacritty
 
 # Program binds
-bind = $mainMod SHIFT, RETURN, exec, wezterm
+bind = $mainMod SHIFT, RETURN, exec, $term
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
-bind = $mainMod, N, exec, wezterm start --class "notes-editor" -e notes-commit
+bind = $mainMod, N, exec, $termStart --class "notes-editor" -e notes-commit
 
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, L, exec, lock
@@ -41,11 +45,18 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 
-# Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# move active window but don't switch workspace withit
+bind = $mainMod CTRL, 1, movetoworkspacesilent, 1
+bind = $mainMod CTRL, 2, movetoworkspacesilent, 2
+bind = $mainMod CTRL, 3, movetoworkspacesilent, 3
+bind = $mainMod CTRL, 4, movetoworkspacesilent, 4
+bind = $mainMod CTRL, 5, movetoworkspacesilent, 5
+bind = $mainMod CTRL, 6, movetoworkspacesilent, 6
+bind = $mainMod CTRL, 7, movetoworkspacesilent, 7
+bind = $mainMod CTRL, 8, movetoworkspacesilent, 8
+bind = $mainMod CTRL, 9, movetoworkspacesilent, 9
 
-bind = $mainMod, S,exec,grimblast copy area
+bind = $mainMod, S,exec, grimblast copy area
 bind = $mainMod SHIFT,S, exec, grimblast save output
 
 bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
@@ -53,7 +64,6 @@ bind = , XF86RaiseLowerVolume, exec, pamixer --increase 5
 bind = , XF86AudioMute, exec, pamixer --toggle-mute
 bind = , XF86MonBrightnessUp, exec, brightnessctl set +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -68,8 +78,6 @@ bind = ,W, exec, ~/.config/rofi/bin/windows.sh
 bind = ,W, submap, reset
 bind = ,P, exec, ~/.config/rofi/bin/powermenu.sh
 bind = ,P, submap, reset
-# bind = ,N, exec, ~/.config/rofi/bin/notes.sh
-# bind = ,N, submap, reset
 
 bind = ,escape, submap, reset
 submap = reset
