refactor hyprland and add ksnip

--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -3,19 +3,21 @@ $term = wezterm
 $termStart = wezterm start
 # $term = alacritty
 # $termStart = alacritty
+env = GRIMBLAST_EDITOR, ksnip
 
 # Program binds
 bind = $mainMod SHIFT, RETURN, exec, $term
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
 bind = $mainMod, N, exec, $termStart --class "notes-editor" -e notes-commit
-
-bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, L, exec, lock
-bind = $mainMod, f, fullscreen, 0
-bind = $mainMod SHIFT, f, togglefloating,
+bind = $mainMod, S,exec, grimblast copy area
+bind = $mainMod SHIFT,S, exec, grimblast edit area
 
 bind = $mainMod SHIFT, m, exit,
 bind = $mainMod SHIFT, R, exec, hyprctl reload
+bind = $mainMod SHIFT, Q, killactive,
+bind = $mainMod, f, fullscreen, 0
+bind = $mainMod SHIFT, f, togglefloating,
 
 # Move focus with mainMod + hjkl
 bind = $mainMod, h, movefocus, l
@@ -55,9 +57,6 @@ bind = $mainMod CTRL, 6, movetoworkspacesilent, 6
 bind = $mainMod CTRL, 7, movetoworkspacesilent, 7
 bind = $mainMod CTRL, 8, movetoworkspacesilent, 8
 bind = $mainMod CTRL, 9, movetoworkspacesilent, 9
-
-bind = $mainMod, S,exec, grimblast copy area
-bind = $mainMod SHIFT,S, exec, grimblast save output
 
 bind = , XF86AudioLowerVolume, exec, pamixer --decrease 5
 bind = , XF86RaiseLowerVolume, exec, pamixer --increase 5
