--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -4,7 +4,7 @@ monitor=,preferred,auto,1
 # monitor=DP-3,1920x1080,0x0,1
 
 # Some default env vars.
-env = GDK_SCALE=2
+env = GDK_SCALE,2
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # env = GTK_THEME, Catppuccin-Mocha-Standard-Rosewater-Dark
@@ -67,9 +67,11 @@ misc {
   force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
-source = ./keys.conf
-source = ./windows.conf
-source = ./execs.conf
-
 animation=windows,1,5,default,popin 80%
 animation=workspaces,1,5,default,slidefadevert 20%
+
+source = ./conf/keys.conf
+source = ./conf/windows.conf
+source = ./conf/execs.conf
+
+
