switch to hyprlock and hypridle

--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -1,14 +1,14 @@
 # exec-once = ~/.config/hypr/start_eww.sh &
 # exec-once = flameshot &
-exec = swww init &
+exec = swww init
 
-exec-once = dunst -conf ~/.config/hypr/dunstrc &
+exec-once = dunst -conf ~/.config/hypr/dunstrc
 # exec-once = udiskie &
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
-exec = swayidle &
-exec = kanshi &
+exec = hypridle
+exec = kanshi
 
 # TODO: make hyprman kill eww if necessary
-exec = pkill eww & hyprman monitors &
+exec = pkill eww & hyprman monitors
 
