--- a/home/private_dot_config/hypr/conf/keys.conf
+++ b/home/private_dot_config/hypr/conf/keys.conf
@@ -9,7 +9,7 @@ env = GRIMBLAST_EDITOR, ksnip
 bind = $mainMod SHIFT, RETURN, exec, $term
 bind = $mainMod, P, exec, ~/.config/rofi/bin/launcher.sh
 bind = $mainMod, N, exec, $termStart --class "notes-editor" -e notes-commit
-bind = $mainMod SHIFT, L, exec, lock
+bind = $mainMod SHIFT, L, exec, hyprlock
 bind = $mainMod, S,exec, grimblast copy area
 bind = $mainMod SHIFT,S, exec, grimblast edit area
 
