switch to recursive

--- a/home/private_dot_config/hypr/hyprlock.conf
+++ b/home/private_dot_config/hypr/hyprlock.conf
@@ -5,7 +5,7 @@ $accent = $rosewater
 # $accentAlpha = $rosewaterAlpha
 $accentAlpha = f5e0dc
 
-$font = FiraCode Nerd Font Mono
+$font = Recursive Mn Csl St Blk
 
 # GENERAL
 general {
