--- a/home/private_dot_config/gtk-4.0/settings.ini
+++ b/home/private_dot_config/gtk-4.0/settings.ini
@@ -1,13 +1,4 @@
 [Settings]
-gtk-icon-theme-name=Papirus-Dark
+; gtk-icon-theme-name=breeze
+; gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
 gtk-application-prefer-dark-theme=false
-gtk-cursor-theme-name=Catppuccin-Mocha-Dark-Cursors
-gtk-cursor-theme-size=24
-gtk-decoration-layout=icon:minimize,maximize,close
-gtk-enable-animations=true
-gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=breeze
-gtk-modules=colorreload-gtk-module
-gtk-primary-button-warps-slider=false
-gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
-gtk-xft-dpi=98304
