--- a/home/private_dot_config/private_gtk-3.0/settings.ini
+++ b/home/private_dot_config/private_gtk-3.0/settings.ini
@@ -1,4 +1,4 @@
 [Settings]
 ; gtk-icon-theme-name=breeze
-; gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
+gtk-theme-name=Catppuccin-Mocha-Standard-Rosewater-Dark
 gtk-application-prefer-dark-theme=false
