ignore some more gui configs

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -8,9 +8,11 @@ bin/lock
 .config/autorandr
 .config/pikaur.conf
 .config/gtk-3.0
+.config/gtk-4.0
 .config/vivaldi
 .config/eww
 .config/hypr
+.config/hyprman
 .config/rofi
 .config/swayidle
 .config/swaylock
