add fix for temporary DP-6 profile

--- a/home/private_dot_config/kanshi/config
+++ b/home/private_dot_config/kanshi/config
@@ -17,5 +17,6 @@ profile {
 profile {
   output eDP-1 mode 1920x1200 position 1920,0
   output DP-6 mode 1920x1080 position 0,0
+  exec swww img -o eDP-1 ~/.config/hypr/wallpapers/current/00005-4229950720.png & swww img -o DP-6 ~/.config/hypr/wallpapers/current/00007-2215131892.png
 }
 
