--- a/home/private_dot_config/hypr/hyprland.conf
+++ b/home/private_dot_config/hypr/hyprland.conf
@@ -9,6 +9,9 @@ env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 # env = GTK_THEME, Catppuccin-Mocha-Standard-Rosewater-Dark
 
+debug {
+    disable_logs = false
+}
 
 general {
     gaps_in = 5
