--- a/home/private_dot_config/hypr/conf/execs.conf
+++ b/home/private_dot_config/hypr/conf/execs.conf
@@ -2,7 +2,8 @@
 # exec-once = flameshot &
 exec = swww init
 
-exec-once = dunst -conf ~/.config/hypr/dunstrc
+# exec-once = dunst -conf ~/.config/hypr/dunstrc
+exec-once = mako
 exec-once = udiskie &
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 
