add back notes-editor rules

--- a/home/private_dot_config/hypr/conf/windows.conf
+++ b/home/private_dot_config/hypr/conf/windows.conf
@@ -6,11 +6,9 @@ windowrulev2 = tile,class:(Vivaldi-stable)
 
 windowrulev2 = float,class:^(MultiViewer for F1)$
 
-
+# notes-editor rules
 windowrulev2 = float, class:^(notes-editor)$
 windowrulev2 = move 10% 10% ,class:^(notes-editor)$
 windowrulev2 = size 80% 80% ,class:^(notes-editor)$
 windowrulev2 = dimaround, class:^(notes-editor)$
 windowrulev2 = animation popin 50%, class:^(notes-editor)$
-
-
